# rust-job-scheduler

./: .releaserc.json  Cargo.toml  README.md  build.rs
.github/workflows/: audit.yaml  merge-main.yaml  merge-master.yaml  prerelease.yaml  pull-request.yaml  released.yaml
proto/worker/: worker.proto
src/: client.rs  lib.rs  server.rs  worker.rs
