[package]
name = "console"
version = "0.1.0"
edition = "2021"


[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # serde_json is just for the example, not required in general
clap = { version = "3.1.17", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.7"
prost = "0.10"

[build-dependencies]
tonic-build = "0.7"
