[package]
name = "console"
version = "0.1.0"
edition = "2021"


[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for async / await
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # serde_json is just for the example, not required in general
chrono = "0.4.19"
tonic = "0.7"
prost = "0.10"
uuid = { version = "1.0.0", features = ["v4"] }
log = "0.4.17"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.7"
